Don't apply container flip when computing offset to transformed ancestor.

Coordinates of PaintLayers are already in physical space.

BUG=599757

Review-Url: https://codereview.chromium.org/1955703004
Cr-Commit-Position: refs/heads/master@{#392407}

Former-commit-id: ddc6af1c80430a1dc846829ddb42bd61a2f21ff1